generate "public" site under "docs"

--- a/config.toml
+++ b/config.toml
@@ -4,6 +4,8 @@ metadataformat = "yaml"
 title = "XRP Ledger documentation"
 theme = "hugo-alabaster-theme"
 
+publishDir="docs"
+
 disqusShortname = ""
 googleAnalytics = ""
 
